Fixed alignment of profile picture

--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@
 #personal-picture {
 	margin-top: 100px;
 	border-radius: 150px;
+	margin-left: 28px;
+	margin-bottom: 20px;
 }
 
 .social-logo-page {
